textwire/testdata/good/before/no-stmts/no-reserves.tw
<div>This is a {{ "  layout  ".trim() }}</div>