textwire/testdata/bad/undefined-use/index.tw
@use('undefined-layout')

<div class="header">
    <h1>This is a Heading</h1>
    <p>This is a paragraph.</p>
    <p>This is another paragraph.</p>
</div>